--- a/css/styles.css
+++ b/css/styles.css
@@ -10120,6 +10120,10 @@ section.resume-section .resume-section-content {
   width: 100%;
 }
 
+.portfolio-images {
+  width: 250px;
+}
+
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh;
